change of format - song has usedchords section, new chordbag class, everything mixed together